# washedmcp

./: .gitignore  INSTALL.md  QUICKSTART.md  README.md  marketplace.json  pyproject.toml  setup-claude.sh
.claude/: settings.local.json
Documents/Nex/washedmcp-site/: package-lock.json  package.json  tailwind.config.ts
Documents/Nex/washedmcp-site/src/app/: globals.css  layout.tsx  page.tsx
Documents/Nex/washedmcp-site/src/components/: DecryptedText.tsx
Documents/Nex/washedmcp-site/src/components/landing/: HeroDecrypted.tsx  PixelBackdrop.tsx  ProductTabs.tsx  ProofCard.tsx  TokenStat.tsx
src/: indexer.py  mcp_server.py  searcher.py
washedmcp/: __init__.py
washedmcp/mcp/codesearch/: index.ts
